--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -865,13 +865,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aca5989",
+   "id": "ff3d46b1",
    "metadata": {},
    "source": [
-    "- Clicks and website landing hits have a **strong positive correlation (0.73)** with the number of transactions, indicating that driving user engagement directly increases purchases.\n",
-    "- Impressions show a **weak or negative correlation** with transactions (–0.26), suggesting that exposure alone does not lead to conversions and may indicate inefficient ad spend.\n",
-    "- Sales only show **moderate correlation (0.42–0.45)** with impressions, clicks, and website hits, which may imply friction in the conversion funnel post-click.\n",
-    "- **Recommendation:** Prioritize improving click-through rate (CTR) and post-click user experience, rather than increasing impressions. Focus on campaigns that turn engagement into actual transactions."
+    "- clicks and website landing hits have strong positive correlation (0.73) with number of transactions, indicating that driving user engagement directly increases sales.\n",
+    "- impressions have weak correlation (-0.26) with number of transactions, inidcate exposre alone does not lead to conversion.\n",
+    "- sales only show moderate correlation (0.42 - 0.45) with impressions, clicks, and website landing hits.\n",
+    "- for further steps is more focus on boosting clicks and website landing hits.\n",
+    "- pair engagement strategies with upselling or high value offer to increase revenue per transaction."
    ]
   },
   {
@@ -1067,15 +1068,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8764635",
+   "id": "1104f5d4",
    "metadata": {},
    "source": [
-    "- The **Holiday Sale** campaign had the **lowest Cost Per Click (CPC) at 1.00**, indicating efficient use of ad budget to drive engagement.\n",
-    "- However, it still resulted in a **highly negative Return on Investment (ROI) of –0.93**, showing that clicks did not translate into sufficient revenue.\n",
-    "- This suggests a **conversion issue after the click**, such as a weak landing page, poor offer relevance, or lack of purchase intent.\n",
-    "- Compared to other campaigns, Holiday Sale spent more efficiently per click but **was not more effective in generating returns**.\n",
-    "- The minimal ROI variation across campaigns implies that **improving the post-click funnel is more critical than adjusting media spend.**\n",
-    "- **Recommendation: Maintain the low CPC structure of the Holiday Sale campaign, but improve the post-click experience (e.g., landing page content, user journey, or offer clarity) to increase conversion and improve ROI.**\n"
+    "- holiday sale campaign had the lowest cost per click (CPC) at 1, indicating efficient use of ad budget to drive engagement.\n",
+    "- but still result high negative return on investment (ROI) at -0.93, showing that clicks do not translate into sufficient revenue.\n",
+    "- suggest there is conversion issues after click, such as poor offer relevance, lack of purchase intention, or uninterest into landing page.\n",
+    "- compared to the other campaign, holiday sale spent more efficient at CPC but not more effective at ROI.\n",
+    "- indicating that minimal ROI across campaign implies that must improve the post click funnel is more critical compared to adjusting media spend.\n",
+    "- espescially to maintain the low CPC like holiday sale but must improve the post click experience to generate more conversion or ROI"
    ]
   },
   {
@@ -1128,14 +1129,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fec06084",
+   "id": "2dcac726",
    "metadata": {},
    "source": [
-    "- The **Holiday Sale** campaign had a **low bounce rate of 3.5%**, meaning the vast majority of users who clicked the ad successfully reached the landing page.\n",
-    "- This indicates that **technical delivery (e.g., page load speed, link accuracy)** was not an issue.\n",
-    "- Despite this, the campaign still showed **poor ROI**, suggesting that the problem lies **after the landing page** — likely in **content quality, offer relevance, or conversion strategy**.\n",
-    "- The bounce rate is in line with other campaigns, confirming that **engagement drop-off did not occur at the point of access**.\n",
-    "- **Recommendation: Maintain current technical setup for Holiday Sale, but improve the landing page content, design, or offer clarity to better convert incoming traffic into sales.**\n"
+    "- holiday sale campaign had a low bounce rate of 3.5%, meaning the vast majority of users who clicked the ad successfully reached the landing page.\n",
+    "- indicates that technical delivery such as page load speed or link accuracy was not an issue.\n",
+    "- despite this, the campaign still showed poor ROI, suggesting that the problem lies after the landing page, likely in content quality, offer relevance, or conversion strategy.\n",
+    "- the bounce rate is in line with other campaigns, confirming that engagement drop-off did not occur at the point of access.\n",
+    "- further action is maintain current technical setup for holiday sale, but improve the landing page content, design, or offer clarity to better convert incoming traffic into sales.\n"
    ]
   },
   {
@@ -1333,10 +1334,10 @@
    "id": "3934306f",
    "metadata": {},
    "source": [
-    "- New customers generated **350** in sales with an ROI of **–0.95**, indicating poor conversion and the least efficient use of budget.\n",
-    "- Repeat customers generated **500** in sales with a better ROI of **–0.92**, showing stronger engagement and higher return per dollar spent.\n",
-    "- Repeat customers outperformed new customers in both revenue and ROI, despite likely being a smaller audience.\n",
-    "- Recommendation: **Focus future campaigns on repeat customers**, who deliver better performance and return compared to new customer segments.\n"
+    "- new customers generated 350 in sales with an ROI of –0.95, indicating poor conversion and the least efficient use of budget.\n",
+    "- repeat customers generated 500 in sales with a better ROI of –0.92, showing stronger engagement and higher return per dollar spent.\n",
+    "- repeat customers outperformed new customers in both revenue and ROI, despite likely being a smaller audience.\n",
+    "- recommendation is focus future campaigns on repeat customers, who deliver better performance and return compared to new customer segments.\n"
    ]
   },
   {
@@ -1731,13 +1732,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b875f15",
+   "id": "98bb3858",
    "metadata": {},
    "source": [
-    "- New customers generated **350** in sales with an ROI of **–0.95**, indicating poor conversion and the least efficient use of budget.\n",
-    "- Repeat customers generated **500** in sales with a better ROI of **–0.92**, showing stronger engagement and higher return per dollar spent.\n",
-    "- Repeat customers outperformed new customers in both revenue and ROI, despite likely being a smaller audience.\n",
-    "- Recommendation: **Focus future campaigns on repeat customers**, who deliver better performance and return compared to new customer segments.\n"
+    "- new customers generated 350 in sales with an ROI of –0.95, indicating poor conversion and the least efficient use of budget.\n",
+    "- repeat customers generated 500 in sales with a better ROI of –0.92, showing stronger engagement and higher return per dollar spent.\n",
+    "- repeat customers outperformed new customers in both revenue and ROI, despite likely being a smaller audience.\n",
+    "- recommendation is focus future campaigns on repeat customers, who deliver better performance and return compared to new customer segments.\n"
    ]
   },
   {
@@ -1791,7 +1792,7 @@
    "metadata": {},
    "source": [
     "- health & beauty and groceries vary on different campaign type\n",
-    "- health & beauty amd groceries had most frequent pruchase\n",
+    "- health & beauty and groceries had most frequent pruchase\n",
     "- customer tend to buy electronic on clearance sale campaign, suggesting low demand because only 1 transaction\n",
     "- future campaign more focus on health & beauty and groceries because align with current customer preference"
    ]
