update notebook: give recommendation

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1076,7 +1076,7 @@
     "- suggest there is conversion issues after click, such as poor offer relevance, lack of purchase intention, or uninterest into landing page.\n",
     "- compared to the other campaign, holiday sale spent more efficient at CPC but not more effective at ROI.\n",
     "- indicating that minimal ROI across campaign implies that must improve the post click funnel is more critical compared to adjusting media spend.\n",
-    "- espescially to maintain the low CPC like holiday sale but must improve the post click experience to generate more conversion or ROI"
+    "- especially to maintain the low CPC like holiday sale but must improve the post click experience to generate more conversion or ROI"
    ]
   },
   {
@@ -1337,7 +1337,7 @@
     "- new customers generated 350 in sales with an ROI of –0.95, indicating poor conversion and the least efficient use of budget.\n",
     "- repeat customers generated 500 in sales with a better ROI of –0.92, showing stronger engagement and higher return per dollar spent.\n",
     "- repeat customers outperformed new customers in both revenue and ROI, despite likely being a smaller audience.\n",
-    "- recommendation is focus future campaigns on repeat customers, who deliver better performance and return compared to new customer segments.\n"
+    "- recommendation is focus future campaigns on repeat customers, who deliver better performance and return compared to new customer segments."
    ]
   },
   {
@@ -1435,10 +1435,10 @@
    "id": "2295996b",
    "metadata": {},
    "source": [
-    "- health & beauty and groceries vary on different campaign type\n",
-    "- health & beauty amd groceries had most frequent pruchase\n",
-    "- customer tend to buy electronic on clearance sale campaign, suggesting low demand because only 1 transaction\n",
-    "- future campaign more focus on health & beauty and groceries because align with current customer preference"
+    "- health & beauty and groceries vary on different campaign type.\n",
+    "- health & beauty and groceries had most frequent purchase.\n",
+    "- customer tend to buy electronic on clearance sale campaign, suggesting low demand because only 1 transaction.\n",
+    "- future campaign more focus on health & beauty and groceries because align with current customer preference."
    ]
   },
   {
@@ -1528,8 +1528,8 @@
    "id": "57bcafdc",
    "metadata": {},
    "source": [
-    "- female more frequent, encourage higher basket size through bundling, discount on adds-on, or loyalty reward for increase purchase\n",
-    "- male more spend, upsell or promote high values product"
+    "- female more frequent, encourage higher basket size through bundling, discount on adds-on, or loyalty reward for increase purchase.\n",
+    "- male more spend, upsell or promote high values product."
    ]
   },
   {
@@ -1806,11 +1806,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b505ef4",
+   "cell_type": "markdown",
+   "id": "5fd4294d",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "- clicks and website visits drive transactions, but not revenue, the issue lies after the click, not before it.\n",
+    "- the Holiday Sale had great CPC and low bounce rate, but poor ROI pointing to weak landing page content or offer relevance.\n",
+    "- repeat customers convert better and bring higher ROI. focus on them.\n",
+    "- Health & Beauty and Groceries are top-performing categories. prioritize them.\n",
+    "- female customers buy more often. male customers spend more. Tailor campaigns to both.\n",
+    "- peak engagement happened in early january, double down on Q1 launches.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eddc3753",
+   "metadata": {},
+   "source": [
+    "**Optimizing Audience Targeting**\n",
+    "- prioritize repeat customers, who show higher ROI and stronger engagement than new customers, focus retargeting and loyalty campaigns here.\n",
+    "- segment by gender behavior: offer bundles and discounts to increase spend from frequent female buyers, promote premium or high-value items to male customers who spend more per transaction.\n",
+    "\n",
+    "**Enhancing Campaign Efficiency**\n",
+    "- improve post-click experience, enhance landing pages, refine offers, and simplify checkout to convert existing traffic into sales.\n",
+    "- maintain low CPC like the holiday sale, but shift budget toward channels with higher engagement to conversion ratios.\n",
+    "- time campaigns during proven peak windows such as early january to capitalize on naturally higher engagement without increasing spend.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "447605e1",
+   "metadata": {},
    "source": []
   }
  ],
